fix selection layout bugs caused by overflow-x-hidden

--- a/src/Pages/Selection/selection.css
+++ b/src/Pages/Selection/selection.css
@@ -1,10 +1,5 @@
 .selection {
-  /* @apply flex flex-col px-4 py-5 mb-10; */
-  @apply flex flex-col px-4 mb-8;
-
-  @media (--sm) {
-    @apply mb-10;
-  }
+  @apply flex flex-col px-4;
 
   @media (--md) {
     @apply flex-row p-0;
@@ -62,10 +57,14 @@
   } */
 
   &__content {
-    @apply w-1/2;
+    /* padding top is important to preserve the y overflow (since we are using overflow-x-hidden) */
+    @apply px-4 pt-8 pb-10 overflow-x-hidden;
 
+    @media (--sm) {
+      @apply pt-10;
+    }
     @media (--md) {
-      @apply w-1/3;
+      @apply px-10;
     }
   }
 
